--- a/CV/Views/Project/CRM.cshtml
+++ b/CV/Views/Project/CRM.cshtml
@@ -1,107 +1,111 @@
-﻿<div class="hero has-bottom-border">
-    <div class="hero-body">
-        <div class="columns">
-            <div class="column auto-margin">
-                <div class="image is-256x256 auto-margin  is-vertical-center">
-                    <img class="" src="~/Content/img/crm.png" />
-                </div>
-                <div class="has-text-centered">
-                    <span class="tag">.NET MVC</span>
-                    <span class="tag">Bootstrap</span>
-                    <span class="tag">SQL</span>
-                </div>
+﻿<script src="/Scripts/project.js"></script>
 
-            </div>
-            <div class="column auto-margin">
-                <div class="section has-text-justified">
-                    <p> This is the first web application project I was involved in. It was a way to transition from my non-dev to a dev-job.</p>
-                </div>
+<div id="ProjectInstance">
+    <div class="hero has-bottom-border">
+        <div class="hero-body">
+            <div class="columns">
+                <div class="column auto-margin">
+                    <div class="image is-256x256 auto-margin  is-vertical-center">
+                        <img class="" src="~/Content/img/crm.png" />
+                    </div>
+                    <div class="has-text-centered">
+                        <span class="tag">.NET MVC</span>
+                        <span class="tag">Bootstrap</span>
+                        <span class="tag">SQL</span>
+                    </div>
 
+                </div>
+                <div class="column auto-margin">
+                    <div class="section has-text-justified">
+                        <p> This is the first web application project I was involved in. It was a way to transition from my non-dev to a dev-job.</p>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="content sub-section-margin">
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">Problem</h3>
-        <p> ITC, my previous employer had an internal CRM desktop application written in Delphi. This was problematic due to compatibility issues with running the application on different platforms. </p>
-    </div>
+    <div class="content sub-section-margin">
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">Problem</h3>
+            <p> ITC, my previous employer had an internal CRM desktop application written in Delphi. This was problematic due to compatibility issues with running the application on different platforms. </p>
+        </div>
 
-    <div class="box is-shadowless is-transparent has-text-centered">
-        <i class="fas fa-arrow-alt-circle-down has-crm-color is-size-3"></i>
-    </div>
+        <div class="box is-shadowless is-transparent has-text-centered">
+            <i class="fas fa-arrow-alt-circle-down has-crm-color is-size-3"></i>
+        </div>
 
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">Solution</h3>
-        <p> Rewrite the application as a web application. We converted the database to an MSSQL database and went from there.</p>
-    </div>
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">Solution</h3>
+            <p> Rewrite the application as a web application. We converted the database to an MSSQL database and went from there.</p>
+        </div>
 
-    <div class="box is-shadowless is-transparent has-text-centered">
-        <i class="fas fa-arrow-alt-circle-down has-crm-color is-size-3"></i>
-    </div>
+        <div class="box is-shadowless is-transparent has-text-centered">
+            <i class="fas fa-arrow-alt-circle-down has-crm-color is-size-3"></i>
+        </div>
 
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">What I learned</h3>
-        <div class="content">
-            <h6 class="title is-6"> HTML, Bootstrap, Razor, SQL, .NET</h6>
-            <p>
-                This was my first project (outside of university) where I had to delve into programming and this was a great introductory course for my learning. I already knew a fair bit
-                about HTML and CSS but being able to use a popular library like bootstrap was quite eye-opening. It also allowed me to understand how information from sources like a relational
-                database is presented to a user, which in this case uses MVC's Razor View. 
-            </p>
-            <p>
-                Overall, this project was an introductory course on these technologies but on top of all the technologies, the main takeaway from this project was learning about the different architecural pattern
-                that MVC offered and what other patterns exist out there.
-            </p>
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">What I learned</h3>
+            <div class="content">
+                <h6 class="title is-6"> HTML, Bootstrap, Razor, SQL, .NET</h6>
+                <p>
+                    This was my first project (outside of university) where I had to delve into programming and this was a great introductory course for my learning. I already knew a fair bit
+                    about HTML and CSS but being able to use a popular library like bootstrap was quite eye-opening. It also allowed me to understand how information from sources like a relational
+                    database is presented to a user, which in this case uses MVC's Razor View.
+                </p>
+                <p>
+                    Overall, this project was an introductory course on these technologies but on top of all the technologies, the main takeaway from this project was learning about the different architecural pattern
+                    that MVC offered and what other patterns exist out there.
+                </p>
+            </div>
         </div>
     </div>
 </div>
 
 @*<div class="section-margin">
-    <div class="tile is-ancestor">
-        <div class="tile is-6 is-parent">
-            <div class="tile is-child box">
-                <p class="title">Overview</p>
-                <p>  </p>
+        <div class="tile is-ancestor">
+            <div class="tile is-6 is-parent">
+                <div class="tile is-child box">
+                    <p class="title">Overview</p>
+                    <p>  </p>
+                </div>
+
+            </div>
+            <div class="tile  is-vertical is-parent">
+                <div class="tile is-child box">
+                    <p class="title">Problem</p>
+                    <p> ITC, my previous employer had an internal CRM system written in Delphi as a desktop application. This was problematic due to compatibility issues with running the application on different platforms. </p>
+                </div>
+                <i class="fas fa-arrow-down has-text-centered"></i>
+                <div class="tile is-child box">
+                    <p class="title">Solution</p>
+                    <p> Rewrite the application as a web application. We converted the database to an MSSQL database and went from there.</p>
+                </div>
+                <i class="fas fa-arrow-down has-text-centered"></i>
+            </div>
+        </div>
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">What I learned</h3>
+            <div class="content">
+                <h6 class="title is-6"> Nice introduction to C# .NET MVC </h6>
+                <p>
+                    This was a good introduction to the .NET stack. My friend showed me the ropes and I think this has helped me transition into my first developer job.
+                </p>
             </div>
 
-        </div>
-        <div class="tile  is-vertical is-parent">
-            <div class="tile is-child box">
-                <p class="title">Problem</p>
-                <p> ITC, my previous employer had an internal CRM system written in Delphi as a desktop application. This was problematic due to compatibility issues with running the application on different platforms. </p>
-            </div>
-            <i class="fas fa-arrow-down has-text-centered"></i>
-            <div class="tile is-child box">
-                <p class="title">Solution</p>
-                <p> Rewrite the application as a web application. We converted the database to an MSSQL database and went from there.</p>
-            </div>
-            <i class="fas fa-arrow-down has-text-centered"></i>
-        </div>
-    </div>
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">What I learned</h3>
-        <div class="content">
-            <h6 class="title is-6"> Nice introduction to C# .NET MVC </h6>
-            <p>
-                This was a good introduction to the .NET stack. My friend showed me the ropes and I think this has helped me transition into my first developer job.
-            </p>
-        </div>
+            <div class="content">
+                <h6 class="title is-6"> Change should be managed </h6>
+                <p>
+                    No matter how cool or modern looking your application is, people tend to choose what they are used to over a new, fresh look. With the old desktop application written years prior, the application looked a little outdated.
+                    Using Bootstrap in this project, we initially tried to make the UI a bit more modern by using different layouts. When we presented this, we were advised to make the layout as similar to the old application as possible.
+                </p>
+                <p>
+                    There is definitely nothing wrong with this, at the end of the day, the customer is always right. It was a good reminder that change should always be managed to ensure that the client both gets what they want as well as directing them to new and fresh ideas.
+                </p>
 
-        <div class="content">
-            <h6 class="title is-6"> Change should be managed </h6>
-            <p>
-                No matter how cool or modern looking your application is, people tend to choose what they are used to over a new, fresh look. With the old desktop application written years prior, the application looked a little outdated. 
-                Using Bootstrap in this project, we initially tried to make the UI a bit more modern by using different layouts. When we presented this, we were advised to make the layout as similar to the old application as possible.
-            </p>
-            <p>
-                There is definitely nothing wrong with this, at the end of the day, the customer is always right. It was a good reminder that change should always be managed to ensure that the client both gets what they want as well as directing them to new and fresh ideas.
-            </p>
-
+            </div>
         </div>
-    </div>
-</div>*@
+    </div>*@
 
 
 @*<div>
