--- a/CV/Views/Project/NFTB.cshtml
+++ b/CV/Views/Project/NFTB.cshtml
@@ -1,189 +1,200 @@
-﻿<div class="hero has-bottom-border">
-    @*<div class="image is-128x128 is-div-centered level-item">
-        <img class="" src="~/Content/img/NFTB.png" />
-    </div>
-    <div class="has-text-centered">
-        NFTB - 2018
-    </div>*@
-    <div class="hero-body">
-        <div class="columns">
-            <div class="column auto-margin">
-                <div class="image is-256x256 auto-margin is-vertical-center">
-                    <img class="" src="~/Content/img/NFTB.png"/>
+﻿<script src="/Scripts/project.js"></script>
 
-                </div>
-                <div class="has-text-centered">
-                    <span class="tag">.NET Web API</span>
-                    <span class="tag">Xamarin.Forms</span>
-                </div>
-
-
+<div id="ProjectInstance">
+    <div class="hero has-bottom-border">
+        @*<div class="image is-128x128 is-div-centered level-item">
+                <img class="" src="~/Content/img/NFTB.png" />
             </div>
-            <div class="column auto-margin">
-                <div class="section has-text-justified content">
-                    <p> Before I became a professional nappy changer, I played social basketball. As part of this commitment, I coordinated all the logistics including the collection of money. This meant some pretty hefty calculations! </p>
-                    <p>
-                        The creation of this app was inspired by a couple of things:
-                        <ul>
-                            <li> My goal of successfully creating a mobile app </li>
-                            <li> Make my life easier.</li>
-                        </ul>
-                    </p> 
-                </div>
+            <div class="has-text-centered">
+                NFTB - 2018
+            </div>*@
+        <div class="hero-body">
+            <div class="columns">
+                <div class="column auto-margin">
+                    <div class="image is-256x256 auto-margin is-vertical-center">
+                        <img class="" src="~/Content/img/NFTB.png" />
 
+                    </div>
+                    <div class="has-text-centered">
+                        <span class="tag">.NET Web API</span>
+                        <span class="tag">Xamarin.Forms</span>
+                    </div>
+
+
+                </div>
+                <div class="column auto-margin">
+                    <div class="section has-text-justified content">
+                        <p> Before I became a professional nappy changer, I played social basketball. As part of this commitment, I coordinated all the logistics including the collection of money. This meant some pretty hefty calculations! </p>
+                        <p>
+                            The creation of this app was inspired by a couple of things:
+                            <ul>
+                                <li> My goal of successfully creating a mobile app </li>
+                                <li> Make my life easier.</li>
+                            </ul>
+                        </p>
+                    </div>
+
+                </div>
             </div>
         </div>
+
     </div>
 
-</div>
-
-<div class="content sub-section-margin">
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">Problem</h3>
-        <p>
-            There were two types of players; permanent and casual.  
-        </p>
-        <p>
-            Permanent players paid a portion of the court hire bond, and would evenly split the court hire fee at the end of the term. Casual players would pay a small fee on a weekly basis. Each casual member who attended and paid would be steadily reducing the total amount owed for the permanent members to split and pay at the end.
-        </p>
-        <p>
-            In addition to this evolving calculation, week after week players were asking for IOUs or forgetting to pay their fee. I wanted to keep track of these problematic people so I could get my lackeys to sort them out. ;)
-        </p>
-    </div>
-    
-    <div class="box is-shadowless is-transparent has-text-centered">
-        <i class="fas fa-arrow-alt-circle-down has-nftb-color is-size-3"></i>
-    </div>
-    
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">Solution</h3>
-        <p> Create a mobile app using Xamarin, an automatic calculator, that keeps a record of who owes money, and how much each permanent player needs to pay at the end of the term. </p>
-    </div>
-    
-    <div class="box is-shadowless is-transparent has-text-centered">
-        <i class="fas fa-arrow-alt-circle-down has-nftb-color is-size-3"></i>
-    </div>
-
-    <div class="box">
-        <h3 class="title is-3 has-bottom-border">What I learned</h3>
-        <div class="content">
-            <h6 class="title is-6">Xamarin.Forms </h6>
+    <div class="content sub-section-margin">
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">Problem</h3>
             <p>
-                At the time of developing this app, I was completing a Xamarin.Forms project in my workplace. I was keen to expand my understanding of this framework beyond what I was doing in my 9am-5pm role and saw this app as the perfect opportunity to achieve this.
+                There were two types of players; permanent and casual.
+            </p>
+            <p>
+                Permanent players paid a portion of the court hire bond, and would evenly split the court hire fee at the end of the term. Casual players would pay a small fee on a weekly basis. Each casual member who attended and paid would be steadily reducing the total amount owed for the permanent members to split and pay at the end.
+            </p>
+            <p>
+                In addition to this evolving calculation, week after week players were asking for IOUs or forgetting to pay their fee. I wanted to keep track of these problematic people so I could get my lackeys to sort them out. ;)
             </p>
         </div>
 
-        <div class="content">
-            <h6 class="title is-6">.NET Web API</h6>
-            <p>
-                This was a really good way of getting myself more familiar on how .NET Web API works from scratch. It was good to see its functionality and potential in comparison to .NET MVC 5.
-            </p>
+        <div class="box is-shadowless is-transparent has-text-centered">
+            <i class="fas fa-arrow-alt-circle-down has-nftb-color is-size-3"></i>
+        </div>
+
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">Solution</h3>
+            <p> Create a mobile app using Xamarin, an automatic calculator, that keeps a record of who owes money, and how much each permanent player needs to pay at the end of the term. </p>
+        </div>
+
+        <div class="box is-shadowless is-transparent has-text-centered">
+            <i class="fas fa-arrow-alt-circle-down has-nftb-color is-size-3"></i>
+        </div>
+
+        <div class="box">
+            <h3 class="title is-3 has-bottom-border">What I learned</h3>
+            <div class="content">
+                <h6 class="title is-6">Xamarin.Forms </h6>
+                <p>
+                    At the time of developing this app, I was completing a Xamarin.Forms project in my workplace. I was keen to expand my understanding of this framework beyond what I was doing in my 9am-5pm role and saw this app as the perfect opportunity to achieve this.
+                </p>
+            </div>
+
+            <div class="content">
+                <h6 class="title is-6">.NET Web API</h6>
+                <p>
+                    This was a really good way of getting myself more familiar on how .NET Web API works from scratch. It was good to see its functionality and potential in comparison to .NET MVC 5.
+                </p>
+            </div>
+        </div>
+
+        <div class="has-text-centered">
+            <a class="button" v-on:click="LoadGitHub('NFTB.Mobile')">
+                <span class="icon"><i class="fab fa-github"></i></span>
+                <span>View on GitHub</span>
+            </a>
         </div>
     </div>
 </div>
 
 
-@*<div>
-    <div class="hero has-nftb-color is-small is-bold">
-        <div class="hero-body section-margin">
-            <h4 class="">CRM</h4>
-        </div>
-    </div>
-
-    <div class="section-margin">
-        <div class="columns sub-section-margin">
-            <div class="column is-2">
-                <h6 class="subtitle is-6 is-italic">1 - the problem</h6>
-            </div>
-            <div class="column is-10">
-                <p>
-                    The company I worked for had an internal CRM system written in Delphi as a desktpp application and was backed by an MSAccess database. This eventually became problematic because of compatibility issues with running the application on different Windows desktop platforms.
-                </p>
-            </div>
-        </div>
-
-        <div class="columns sub-section-margin">
-            <div class="column is-2">
-                <h6 class="subtitle is-6 is-italic">2 - the solution</h6>
-            </div>
-            <div class="column is-10">
-                <p>
-                    Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.
-                </p>
-            </div>
-        </div>
-
-        <div class="columns sub-section-margin">
-            <div class="column is-2">
-                <h6 class="subtitle is-6 is-italic">Screenshots</h6>
-
-            </div>
-            <div class="column is-10">
-                <div class="columns">
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+    @*<div>
+            <div class="hero has-nftb-color is-small is-bold">
+                <div class="hero-body section-margin">
+                    <h4 class="">CRM</h4>
                 </div>
-                <div class="columns">
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+            </div>
+
+            <div class="section-margin">
+                <div class="columns sub-section-margin">
+                    <div class="column is-2">
+                        <h6 class="subtitle is-6 is-italic">1 - the problem</h6>
+                    </div>
+                    <div class="column is-10">
+                        <p>
+                            The company I worked for had an internal CRM system written in Delphi as a desktpp application and was backed by an MSAccess database. This eventually became problematic because of compatibility issues with running the application on different Windows desktop platforms.
+                        </p>
+                    </div>
                 </div>
 
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<div>
-    <div class="hero is-info is-small is-bold">
-        <div class="hero-body section-margin">
-            <h4 class="">CRM</h4>
-        </div>
-    </div>
-
-    <div class="section-margin">
-        <div class="columns sub-section-margin">
-            <div class="column is-2">
-                <h6 class="subtitle is-6 is-italic">1 - the problem</h6>
-            </div>
-            <div class="column is-10">
-                <p>
-                    The company I worked for had an internal CRM system written in Delphi as a desktpp application and was backed by an MSAccess database. This eventually became problematic because of compatibility issues with running the application on different Windows desktop platforms.
-                </p>
-            </div>
-        </div>
-
-        <div class="columns sub-section-margin">
-            <div class="column is-2">
-                <h6 class="subtitle is-6 is-italic">2 - the solution</h6>
-            </div>
-            <div class="column is-10">
-                <p>
-                    Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.
-                </p>
-            </div>
-        </div>
-
-        <div class="columns sub-section-margin">
-            <div class="column is-2">
-                <h6 class="subtitle is-6 is-italic">Screenshots</h6>
-
-            </div>
-            <div class="column is-10">
-                <div class="columns">
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                <div class="columns sub-section-margin">
+                    <div class="column is-2">
+                        <h6 class="subtitle is-6 is-italic">2 - the solution</h6>
+                    </div>
+                    <div class="column is-10">
+                        <p>
+                            Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.
+                        </p>
+                    </div>
                 </div>
-                <div class="columns">
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
-                    <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+
+                <div class="columns sub-section-margin">
+                    <div class="column is-2">
+                        <h6 class="subtitle is-6 is-italic">Screenshots</h6>
+
+                    </div>
+                    <div class="column is-10">
+                        <div class="columns">
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                        </div>
+                        <div class="columns">
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
         </div>
 
-    </div>
-</div>*@
+        <div>
+            <div class="hero is-info is-small is-bold">
+                <div class="hero-body section-margin">
+                    <h4 class="">CRM</h4>
+                </div>
+            </div>
+
+            <div class="section-margin">
+                <div class="columns sub-section-margin">
+                    <div class="column is-2">
+                        <h6 class="subtitle is-6 is-italic">1 - the problem</h6>
+                    </div>
+                    <div class="column is-10">
+                        <p>
+                            The company I worked for had an internal CRM system written in Delphi as a desktpp application and was backed by an MSAccess database. This eventually became problematic because of compatibility issues with running the application on different Windows desktop platforms.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="columns sub-section-margin">
+                    <div class="column is-2">
+                        <h6 class="subtitle is-6 is-italic">2 - the solution</h6>
+                    </div>
+                    <div class="column is-10">
+                        <p>
+                            Rewrite the front end application to a web application. We converted the database to an MSSQL database and went from there.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="columns sub-section-margin">
+                    <div class="column is-2">
+                        <h6 class="subtitle is-6 is-italic">Screenshots</h6>
+
+                    </div>
+                    <div class="column is-10">
+                        <div class="columns">
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                        </div>
+                        <div class="columns">
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                            <div class="screenshot-image column" v-backgroundimage="'crm2.png'"></div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>*@
 
 
 
