--- a/CV/Views/Home/References.cshtml
+++ b/CV/Views/Home/References.cshtml
@@ -20,6 +20,9 @@
         <br/>
         <br />
         <div class="section">
+            <a class="button is-pulled-left has-background-grey-lighter" v-on:click="DownloadReference('Blackball')">
+                Download signed reference
+            </a>
             <p class="is-pulled-right has-text-weight-bold">
                 Ben Liebert, Founder
                 Blackball Software
@@ -37,6 +40,9 @@
         <br/>
         <br />
         <div class="section">
+            <a class="button is-pulled-left has-background-grey-lighter" v-on:click="DownloadReference('ITC')">
+                Download signed reference
+            </a>
             <p class="is-pulled-right has-text-weight-bold">
                 Shane Gregory, Director
                 ITC, LMS
