--- a/CV/Views/Project/CRM.cshtml
+++ b/CV/Views/Project/CRM.cshtml
@@ -54,8 +54,7 @@
                     database is presented to a user, which in this case uses MVC's Razor View.
                 </p>
                 <p>
-                    Overall, this project was an introductory course on these technologies but on top of all the technologies, the main takeaway from this project was learning about the different architecural pattern
-                    that MVC offered and what other patterns exist out there.
+                    Overall, the main takeaway from this project was learning about the different architecural pattern that MVC offered and what other patterns exist out there.
                 </p>
             </div>
         </div>
