--- a/CV/Views/Project/NFTB.cshtml
+++ b/CV/Views/Project/NFTB.cshtml
@@ -85,8 +85,8 @@
         </div>
 
         <div class="has-text-centered">
-            <a class="button" v-on:click="LoadGitHub('NFTB.Mobile')">
-                <span class="icon"><i class="fab fa-github"></i></span>
+            <a class="button has-background-grey-lighter" v-on:click="LoadGitHub('NFTB.Mobile')">
+                <span class="icon has-nftb-color"><i class="fab fa-github"></i></span>
                 <span>View on GitHub</span>
             </a>
         </div>
