--- a/CV/Views/Project/MT4.cshtml
+++ b/CV/Views/Project/MT4.cshtml
@@ -100,8 +100,8 @@
 
         </div>
         <div class="has-text-centered">
-            <a class="button" v-on:click="LoadGitHub('Forex')">
-                <span class="icon"><i class="fab fa-github"></i></span>
+            <a class="button has-background-grey-lighter" v-on:click="LoadGitHub('Forex')">
+                <span class="icon has-mt4-color"><i class="fab fa-github"></i></span>
                 <span>View on GitHub</span>
             </a>
         </div>
