--- a/CV/Views/Project/ThisProject.cshtml
+++ b/CV/Views/Project/ThisProject.cshtml
@@ -22,7 +22,8 @@
                 </div>
                 <div class="column auto-margin">
                     <div class="section has-text-justified content">
-                        <p> It was time to be part of the cool kids and make myself a personal website. this.Project (being this project that you're looking at right now) was created so I can stand out more to potential employers like yourself </p>
+                        <p> The time had come to join the cool kids, and make myself a personal website </p>
+                        <p> this.Project (being this project that you're looking at right now) was created so I can stand out to potential employers like yourself </p>
                     </div>
 
                 </div>
@@ -35,12 +36,12 @@
         <div class="box">
             <h3 class="title is-3 has-bottom-border">Problem</h3>
             <p>
-                Before I found my current job, I had difficulty finding a job for several reasons (I think these were the reasons):
+                Before landing my current job, I had difficulty finding employment as a software developer for several reasons:
             </p>
             <ul>
-                <li>I did not have any commercial experience.</li>
-                <li>I was not considred as a graduate so nobody would take me as a graduate</li>
-                <li>I'm asian (I DID NOT JUST SAY THAT!)</li>
+                <li>I was not seen as a new-graduate as I had been in the workforce for five years already </li>
+                <li>I was not seen a junior developer as I did not have any commercial experience</li>
+                <li>I'm asian (Did you read that correctly?! ...unfortunately, yes you did!)</li>
             </ul>
         </div>
 
@@ -50,8 +51,8 @@
 
         <div class="box">
             <h3 class="title is-3 has-bottom-border">Solution</h3>
-            <p> I need to stand out enough to get YOUR attention. This site was a good way for me to show who I am (because that is more important than skills) without having a 3 page long CV.  </p>
-            <p> This site is also my sandpit to be able to play around with technologies that I want to play with. I can use this site as a template for future projects that require similar technologies.  </p>
+            <p>Develop a personal website using technologies that I know so far in order to stand out, and get YOUR attention</p>
+            <p> This site is also my sandpit to be able to play around with technologies I want to experiment with. I can also use this site as a template for future projects that require similar technologies.</p>
 
         </div>
 
@@ -62,13 +63,15 @@
         <div class="box">
             <h3 class="title is-3 has-bottom-border">What I learned</h3>
             <div class="content">
-                <h6 class="title is-6">Understanding what's under the hood is a good way to learn... at a certain point</h6>
+                <h6 class="title is-6">Do it once, do it right</h6>
                 <p>
-                    One of my intentions for this projects is to avoid using well known CSS and JS libraries. It sounds crazy but I really wanted to get up close with these technologies in their purest form.
+                    I am a big fan of the 'do it once do it right' mantra, however this has not been the case for this project
                 </p>
                 <p>
-                    Unfortunately, this took WAY too long and I wanted to finish up the project so I could start applying for jobs. This time constraint has been unfortunate because I had to clunk in ***VERY UGLY*** code.
-                    I am a big fan of 'do it once do it right' but this has not been the case for this project. As mentioned, this is my sandbox so I will be constantly updating this so that codebase is exactly how I need/want it to be
+                    One of my goals was to avoid using well known CSS and JS libraries. It sounds crazy but I really wanted to get up close with these technologies in their purest form. I did start off that way and got to learn a few things but unfortunately, this is extremely time consuming, and I was under a time constraint. 
+                </p>
+                <p>
+                    Because of this constraint, I have had to clunk in ***VERY UGLY*** code. This however does not align with my values as a developer. As mentioned above, this project is my sandbox, therefore, I see it as something I will constantly update and tinker with until it reaches to become scalable and reusable!
                 </p>
             </div>
 
@@ -80,8 +83,8 @@
         </div>
 
         <div class="has-text-centered">
-            <a class="button" v-on:click="LoadGitHub('ThisProject')">
-                <span class="icon"><i class="fab fa-github"></i></span>
+            <a class="button has-background-grey-lighter" v-on:click="LoadGitHub('ThisProject')">
+                <span class="icon has-thisproject-color"><i class="fab fa-github"></i></span>
                 <span>View on GitHub</span>
             </a>
         </div>
