Minor CSS fixes on timeline

--- a/CV/Views/Home/Index.cshtml
+++ b/CV/Views/Home/Index.cshtml
@@ -58,23 +58,21 @@
             <h1 class="title is-1 is-1-mobile has-bottom-border">About</h1>
             <div class="sub-section-margin">
                 <div class="content">
-
                     <p class="is-italic has-text-justified">
                         "I wanna be the very best, that no one ever waaaas"
                     </p>
                     <p class="is-italic has-text-justified">
                         Dun. Dun. DUDUN.
                     </p>
-                    @*<div class="section is-pulled-right">
-                                <p class="has-text-weight-bold has-no-bottom-margin">Ash Ketchum</p>
-                                <p class="has-text-weight-bold"> Wannabe Pokemon Master</p>
-                            </div>*@
+
                 </div>
             </div>
 
-            <div class="sub-section-margin content">
+            <div class="content">
                 <p> This is Pokemon's infamous opening line. The quote says it all. For the most part anyway.</p>
                 <p>I currently work for a software consultancy and design company based in Parnell, Auckland. I’m a keen learner who is passionate about excellent code and innovative and cutting edge software design. I believe that continuous personal and professional growth is a must, and am looking constantly for opportunities to achieve this.</p>
+                <p>When I'm not coding, I play the bass, DJ, tinker with home automation devices and spend time with my family</p>
+
             </div>
 
             <div class="has-text-centered">
