--- a/CV/Content/xmylife.css
+++ b/CV/Content/xmylife.css
@@ -65,8 +65,8 @@
     flex-direction: column;
     align-items: flex-end;
     flex-basis: 100%;
-    /*margin-left: 4em;*/
-    margin-left: 0;
+    margin-left: 4em;
+    /*margin-left: 0;*/
 }
 
 .timeline.is-centered .timeline-item:nth-of-type(2n) .timeline-content.is-128-high {
@@ -78,23 +78,24 @@
     flex-direction: column;
     align-items: flex-end;
     flex-basis: 100%;
-    /*margin-right: 4em;*/
-    margin-right: 0;
+    margin-right: 4em;
+    /*margin-right: 0;*/
     margin-left: 0;
 }
 
 .timeline.is-centered .timeline-item:nth-of-type(2n) .timeline-content {
     padding: 1em;
-    /*margin-right: 4em;*/
+    margin-right: 4em;
     margin-right: 0;
-    margin-left: 0;
+    /*margin-left: 0;*/
 
 }
 
 .timeline.is-centered .timeline-item .timeline-content {
+    width: 100%;
     padding: 1em;
-    /*margin-left: 4em;*/
-    margin-right: 0;
+    margin-left: 4em;
+    /*margin-right: 0;*/
 
 }
 
