Minor button UI change

--- a/CV/Views/Home/Landing.cshtml
+++ b/CV/Views/Home/Landing.cshtml
@@ -16,7 +16,7 @@
         </p>
         <div class="has-text-centered">
 
-            <a class="button button-animation is-medium has-text-weight-bold is-fullwidth" v-on:click="DownloadCV">
+            <a class="button button-animation is-medium has-text-weight-bold is-fullwidth has-background-grey-lighter" v-on:click="DownloadCV">
                 I just want your CV
             </a>
         </div>
