Change landing button

--- a/CV/Views/Home/Landing.cshtml
+++ b/CV/Views/Home/Landing.cshtml
@@ -11,13 +11,9 @@
     </div>
     
     <div class="content">
-        <p>
-            I don't want to see your website, it'll probably be rubbish anyway. 
-        </p>
         <div class="has-text-centered">
-
             <a class="button button-animation is-medium has-text-weight-bold is-fullwidth has-background-grey-lighter" v-on:click="DownloadCV">
-                I just want your CV
+                No thanks, just take me to your CV
             </a>
         </div>
     </div>
