--- a/CV/Views/Shared/_Layout.cshtml
+++ b/CV/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @*<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">*@
     @*<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:800" rel="stylesheet">*@
     <link rel="stylesheet" href="~/Content/x.css">
-    <link rel="stylesheet" href="~/Content/fontawesome.css">
+    <link rel="stylesheet" href="~/Content/all.min.css">
 
 
 </head>
