Button UI change

--- a/CV/Views/Home/Landing.cshtml
+++ b/CV/Views/Home/Landing.cshtml
@@ -12,8 +12,8 @@
     
     <div class="content">
         <div class="has-text-centered">
-            <a class="button button-animation is-medium has-text-weight-bold is-fullwidth has-background-grey-lighter" v-on:click="DownloadCV">
-                No thanks, just take me to your CV
+            <a class="button button-animation has-text-weight-bold has-background-grey-lighter" v-on:click="DownloadCV">
+                <span>Naaah, just take me to your CV</span>
             </a>
         </div>
     </div>
