Update contact details

--- a/CV/Views/Home/Index.cshtml
+++ b/CV/Views/Home/Index.cshtml
@@ -303,9 +303,9 @@
             <h1 class="title is-1 is-1-mobile has-bottom-border">Contact</h1>
         </div>
         <div class='auto-margin has-text-centered'>
-            <a class="button" href="mailto:ong.edward23@gmail.com">
+            <a class="button" href="mailto:edenco.nz@gmail.com">
                 <span class="icon"><i class="far fa-envelope"></i></span>
-                <span>ong.edward23@gmail.com</span>
+                <span>edenco.nz@gmail.com</span>
             </a>
             <a class="button" href="tel:02102441729">
                 <span class="icon"><i class="fas fa-mobile-alt"></i></span>
