--- a/CV/Views/Home/Index.cshtml
+++ b/CV/Views/Home/Index.cshtml
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class ="columns">
-                        <div class ="column is-3">VueJS(1.x)</div>
+                        <div class ="column is-3">VueJS</div>
                         <div class ="column is-9 is-div-centered">
                             <div class ="myprogress has-text-centered" data-years="2"></div>
                         </div>
