--- a/CV/Views/Home/Index.cshtml
+++ b/CV/Views/Home/Index.cshtml
@@ -224,7 +224,7 @@
             <br/>
             <div class="has-text-centered">
                 <a class="subtitle button button-animation" v-on:click="ShowReferences">
-                    <span>Read what people say about me</span>
+                    <span>What people say about me</span>
                     <span class="icon is-small"> <i class="fas fa-angle-double-right"></i></span>
                 </a>
             </div>
