Change landing page wording

--- a/CV/Views/Home/Landing.cshtml
+++ b/CV/Views/Home/Landing.cshtml
@@ -3,7 +3,7 @@
     <h1 class="title is-1">Hi <span v-html="EmployerCompany"></span></h1>
     <div class="content">
         <p>
-            Apologies for the extra clicks, but I really encourage you to go through my personal site and get to know me better. 
+            Apologies for the extra clicks, but I really encourage you to go through my personal site and get to know me better. Take a look at my projects and what people say about me
         </p>
         <p>
             They (I) say you should hire the person, not the skills. <i class="far fa-smile"></i>
